plugins {
    id 'idea'
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev.legacyforge' version '2.0.115'
}

tasks.named('wrapper', Wrapper).configure {
    // Define wrapper values here so as to not have to always do so when updating gradlew.properties.
    // Switching this to Wrapper.DistributionType.ALL will download the full gradle sources that comes with
    // documentation attached on cursor hover of gradle classes and methods. However, this comes with increased
    // file size for Gradle. If you do switch this to ALL, run the Gradle wrapper task twice afterwards.
    // (Verify by checking gradle/wrapper/gradle-wrapper.properties to see if distributionUrl now points to `-all`)
    distributionType = Wrapper.DistributionType.BIN
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()

    //emi
    maven {
        name = "TerraformersMC"
        url = "https://maven.terraformersmc.com/"
    }

    //jei
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }

    //jei
    maven {
        url = "https://modmaven.dev"
    }

    //curios
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }

    //modrinth
    maven {
        url = "https://api.modrinth.com/maven"
    }

    //neobackports
    maven {
        url = 'https://nikdo53.github.io'
    }
}

dependencies {

    //tiny multiblock lib
    jarJar(modImplementation("maven.modrinth:tiny-multiblock-lib:forge-1.20.1-4.0.0"))
    //jarJar(implementation("maven.modrinth:tiny-multiblock-lib:forge-1.20.1-4.0.0"))

    //NeoBackports
    jarJar(modImplementation("net.nikdo53:NeoBackports:1.3.0"))
    interfaceInjectionData("net.nikdo53:NeoBackports:1.3.0")

    //FTS
    jarJar(implementation("maven.modrinth:fancytabsections:5.0-FORGE-1.20.1"))
    //jarJar(implementation("net.mcexpanded:Fancy-Tabs-Neo:6.2-FORGE-1.20.1"))

    //selling bin
    jarJar(modImplementation("maven.modrinth:wds-selling-bin:1.4.3-FORGE-1.20.1"))

    //tooltips
    jarJar(modImplementation("maven.modrinth:libtooltips:2.3-FORGE-1.20.1"))

    //wdutils
    jarJar(modImplementation("com.wdiscute:wdUtils:1.8-FORGE-1.20.1"))

    //EMI
    modCompileOnly("dev.emi:emi-forge:1.1.22+1.20.1:api")
    //modRuntimeOnly("dev.emi:emi-forge:${emi_version}")

    //JEI
    modCompileOnly "mezz.jei:jei-${mc_version}-forge:15.57.0.207"
    //modRuntimeOnly "mezz.jei:jei-${mc_version}-forge:15.20.0.130"

    //curios (check modifiers in curio slots)
    compileOnly "top.theillusivec4.curios:curios-forge:5.14.1+1.20.1:api"
    //runtimeOnly "top.theillusivec4.curios:curios-neoforge:15.0.0+26.1.2"



    //EclipticSeasons
    compileOnly files(".compatmods/Ecliptic-Seasons-1.20.1-forge-0.15.0-rc-3-all.jar")

    //Serene Seasons
    compileOnly files(".compatmods/SereneSeasons-forge-1.20.1-9.1.0.3.jar")

    //ftb teams
    compileOnly files(".compatmods/ftb-teams-forge-2001.3.2.jar")

    //quality food
    compileOnly files(".compatmods/quality_food-1.20.1-2.4.3-all.jar")


    //mixin
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
    implementation("io.github.llamalad7:mixinextras-forge:[0.5.0,)")
    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.5.0"))


}

java{
    withSourcesJar()
    withJavadocJar()
}

base {
    archivesName = mod_id
}

// Mojang ships Java 17 to end users in 1.20.1, so mods should target Java 17.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

legacyForge {
    // Specify the version of MinecraftForge to use.
    version = project.minecraft_version + '-' + project.forge_version

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    // This line is optional. Access Transformers are automatically detected
    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    // interfaceInjectionData.from "src/main/resources/starcatcher.interfaces.json"

    // Default run configurations.
    // These can be tweaked, removed, or duplicated as needed.
    runs {
        client {
            client()

            // Comma-separated list of namespaces to load gametests from. Empty = all namespaces.
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id


        }
        server {
            server()
            programArgument '--nogui'
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        // applies to all the run configs above
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.WARN
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

// Include resources generated by data generators.
sourceSets.main.resources { srcDir 'src/generated/resources' }

// Sets up a dependency configuration called 'localRuntime' and a deobfuscating one called 'modLocalRuntime'
// These configurations should be used instead of 'runtimeOnly' to declare
// a dependency that will be present for runtime testing but that is
// "optional", meaning it will not be pulled by dependents of this mod.
configurations {
    runtimeClasspath.extendsFrom localRuntime
}
obfuscation {
    createRemappingConfiguration(configurations.localRuntime)
}

// Uncomment the lines below if you wish to configure mixin. The mixin file should be named modid.mixins.json.
mixin {
    add sourceSets.main, "starcatcher.mixins.refmap.json"
    config "starcatcher.mixins.json"
}

jar {
    manifest.attributes([
            "MixinConfigs": "${mod_id}.mixins.json"
    ])

    finalizedBy('reobfJar')
}


// This block of code expands all declared replace properties
// in the specified resource targets.
// A missing property will result in an error. Properties are expanded using ${} Groovy notation.
var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            forge_version          : forge_version,
            forge_version_range    : forge_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from "src/main/templates"
    into "build/generated/sources/modMetadata"
}
// Include the output of "generateModMetadata" as an input directory for the build
// this works with both building through Gradle and the IDE.
sourceSets.main.resources.srcDir generateModMetadata
// To avoid having to run "generateModMetadata" manually, make it run on every project reload
legacyForge.ideSyncTask generateModMetadata

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

// IDEA no longer automatically downloads sources/javadoc jars for dependencies, so we need to explicitly enable the behavior.
idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}